# bench

./: .gitignore  CMakeLists.txt  README.md  clear_hosts  compile  gui.py  master.py  moderator.py  tests.py  update_hosts
client/: CMakeLists.txt  bench  client
client/inc/: client.h  queue.c
client/src/: client.c
config/: hosts
grpc/: engage.proto  slave.py
server/: CMakeLists.txt  README.md  bench  compile  server
server/inc/: chat.h  queue.c  queue.h
server/log/: server_log.txt
server/src/: chat.c  queue.c
src/: chat.c
tests/: tests.py
utils/: class_Node.py  class_edge.py  class_network.py  class_node.py  engage_pb2.py  engage_pb2_grpc.py  globals.py  gui.py  interactions.py  node_status.py
